# multi-ship

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PLAN.md  README.md  install.sh  pyproject.toml
.claude/: multi-ship.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: plugin.yml  release.yml  test.yml
docs/: PROMOTION.md  PUBLISHING.md  demo.md  launch-post.md
docs/plans/: 2026-06-16-bootstrap-plan.md  2026-07-09-correctness-hardening.md
docs/specs/: smoke.md  spec-and-issue-resolution.md
docs/specs/done/: failure-taxonomy-and-fresh-run.md  telegram-notify-backend.md
examples/: README.md  multi-ship.json
examples/github-actions/: README.md  ship-backlog.yml
examples/specs/: add-greeting.md
scripts/: smoke.sh  validate_plugin.py
skills/autonomous-multi-ship/: SKILL.md
skills/autonomous-session/: SKILL.md
skills/dream-run/: SKILL.md
skills/judge-shipped/: SKILL.md
skills/ship-one/: SKILL.md
src/multi_ship/: claude_cli.py  cli.py  config.py  driver.py  endrun.py  handoff.py  notify_telegram.py  preflight.py  resolve.py  runlog.py
templates/: multi-ship.json
tests/: test_claude_cli.py  test_cli_init.py  test_config.py  test_driver_loop.py  test_endrun.py  test_fresh_run.py  test_handoff.py  test_notify_telegram.py  test_policy.py  test_preflight.py  test_resolve.py  test_runlog.py  test_status.py
workflows/: mixed-model-burst.js
