[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-ship"
version = "0.1.0"
description = "Ship a backlog of specs autonomously on Claude Code — one fresh context per item, cold-judge merge gate, on-disk handoff memory."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Alex Monteiro" }]
keywords = [
  "claude-code", "ai-agents", "autonomous-agents", "llm-orchestration",
  "agent-orchestration", "code-generation", "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexfmonteiro/multi-ship"
Repository = "https://github.com/alexfmonteiro/multi-ship"
Issues = "https://github.com/alexfmonteiro/multi-ship/issues"

[project.scripts]
multi-ship = "multi_ship.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
