[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-ship"
version = "0.1.0"
description = "Ship a spec backlog autonomously on Claude Code — an independent cold judge gates every merge (sees only the spec DoD + PR diff). Fresh context per item, on-disk handoff memory."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Alex Monteiro" }]
keywords = [
  "claude-code", "ai-agents", "autonomous-agents", "llm-orchestration",
  "agent-orchestration", "code-generation", "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexfmonteiro/multi-ship"
Repository = "https://github.com/alexfmonteiro/multi-ship"
Issues = "https://github.com/alexfmonteiro/multi-ship/issues"

[project.scripts]
multi-ship = "multi_ship.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_ship"]

# Top-level skills/templates/workflows live at the repo root (so the Claude Code
# plugin can auto-discover them). Carry them inside the wheel under
# multi_ship/_bundle/ so `pipx install multi-ship` works without a clone;
# cli.bundled_dir() resolves either location.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "multi_ship/_bundle/skills"
"templates" = "multi_ship/_bundle/templates"
"workflows" = "multi_ship/_bundle/workflows"

[tool.hatch.build.targets.sdist]
include = [
  "src/multi_ship",
  "skills",
  "templates",
  "workflows",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]
